--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,26 @@
+asn1crypto==0.24.0
+astroid==2.2.5
 certifi==2019.6.16
+cffi==1.12.3
 chardet==3.0.4
+cryptography==2.7
 decorator==4.4.0
+future==0.17.1
 idna==2.8
+isort==4.3.21
+lazy-object-proxy==1.4.1
 Mastodon.py==1.4.5
+mccabe==0.6.1
+pycparser==2.19
+pylint==2.3.1
 python-dateutil==2.8.0
 python-magic==0.4.15
+python-telegram-bot==12.0.0b1
 pytz==2019.1
+PyYAML==5.1.1
 requests==2.22.0
 six==1.12.0
+tornado==6.0.3
+typed-ast==1.4.0
 urllib3==1.25.3
+wrapt==1.11.2
