send a telegram message if someone posts that One Fuckin Site

--- a/settings.sample.yml
+++ b/settings.sample.yml
@@ -11,4 +11,6 @@ chat_id: YOURCHATID
 rules:
   screened_text:
     - "womenarestupid"
+    - "http://womenarestupid.site"
+    - "womenarestupid.site"
     
