--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ python-telegram-bot==12.0.0b1
 pytz==2019.1
 PyYAML==5.1.1
 requests==2.22.0
+schedule==0.6.0
 six==1.12.0
 tornado==6.0.3
 typed-ast==1.4.0
